kube/spec.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jeeves-api
  labels:
    app: jeeves-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jeeves-api
  template:
    metadata:
      labels:
        app: jeeves-api
    spec:
      volumes:
        - name: keys
          secret:
            secretName: mjeeves-key
      imagePullSecrets:
        - name: gitlabreg
      containers:
        - name: api
          image: registry.gitlab.com/mmarzex/mjeeves:fe1bd38b
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              name: api-http
          volumeMounts:
            - mountPath: "/keys"
              name: keys
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jeeves-worker
  labels:
    app: jeeves-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jeeves-worker
  template:
    metadata:
      labels:
        app: jeeves-worker
    spec:
      volumes:
        - name: keys
          secret:
            secretName: mjeeves-key
      imagePullSecrets:
        - name: gitlabreg
      containers:
        - name: worker
          image: registry.gitlab.com/mmarzex/mjeeves:fe1bd38b
          imagePullPolicy: Always
          args:
            - "-run-workers"
            - "true"
          volumeMounts:
            - mountPath: "/keys"
              name: keys
---
apiVersion: v1
kind: Service
metadata:
  name: jeeves-api
  labels:
    app: jeeves-api
spec:
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: jeeves-api
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: jeeves-api-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: mjeeves-beta.marze.tech
      http:
        paths:
          - backend:
              serviceName: jeeves-api
              servicePort: 3000
